Tests for basic scenarios.

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -2,6 +2,8 @@ SET(PROJECT_TEST ${PROJECT_NAME}-test )
 
 set(${PROJECT_TEST}_SOURCES
     WebCreatorTest.cpp
+    ../WebCreator.cpp
+    ../WebCreator.h
     )
 
 add_executable(${PROJECT_TEST} ${${PROJECT_TEST}_SOURCES})
