--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,13 +1,14 @@
 SET(PROJECT_TEST ${PROJECT_NAME}-test )
 
+include_directories(${CMAKE_SOURCE_DIR})
+
 set(${PROJECT_TEST}_SOURCES
     WebCreatorTest.cpp
-    ../WebCreator.cpp
-    ../WebCreator.h
     )
 
 add_executable(${PROJECT_TEST} ${${PROJECT_TEST}_SOURCES})
+target_link_libraries(${PROJECT_TEST} PRIVATE GTest::gtest_main ${PROJECT_NAME}-lib)
 
-target_link_libraries(${PROJECT_TEST} gtest gtest_main)
-
-add_test(NAME ${PROJECT_TEST} COMMAND ${PROJECT_TEST})
+include(CTest)
+include(GoogleTest)
+gtest_discover_tests(${PROJECT_TEST})
